objects/FSLABB_StopTake5__c.object
<CustomObject>
    <fields>
        <fullName>FSLABB_CorrectPPEavailable__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Correct PPE available?</inlineHelpText>
        <label>Correct PPE available?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_CorrectSafetyEquipment__c</fullName>
        <description>Correct safety equipment available (e.g. access, testers etc)?</description>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <label>Correct safety equipment available?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_EnsureSafeInteraction__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Ensure safe interaction with others nearby?</inlineHelpText>
        <label>Ensure safe interaction with others?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_EquipmentWorkAreaSafe__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Equipment in work area is in safe condition?</inlineHelpText>
        <label>Equipment in work area is safe?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_HaveYouListed__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Have you listed all hazards, especially those that are not listed in the risk
assessment</inlineHelpText>
        <label>Have you listed all hazards?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_HazardsControlsRiskshighmediu__c</fullName>
        <inlineHelpText>Hazards / Controls / Risks (high - medium - low)</inlineHelpText>
        <label>Hazards / Controls / Risks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FSLABB_IeYouAreSafe__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>I.e. you are safe, others are safe?</inlineHelpText>
        <label>I.e. you are safe, others are safe?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_RequiredPermitsObtained__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Required permit(s) to work obtained?</inlineHelpText>
        <label>Required permit(s) to work obtained?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_RequiredPhysicalIsolations__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Required physical isolations used (e.g. Lockout Tagout, stored energy)?</inlineHelpText>
        <label>Required physical isolations used?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkAreaClearlyIdentified__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Work area clearly identified (barriers, signs)?</inlineHelpText>
        <label>Work area clearly identified?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkAreaSafe__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Work area is safe (e.g. house keeping, lighting, temperature etc)?</inlineHelpText>
        <label>Work area is safe?</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrderLineItem_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Stop Take 5</relationshipLabel>
        <relationshipName>Stop_Take_5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkOrder_ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Stop Take 5</relationshipLabel>
        <relationshipName>Stop_Take_5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FSLABB_WorkScopSafeWorkingProcedure__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>Work scope, and safe working procedure understood?</inlineHelpText>
        <label>Work scope &amp; safety procedure understood</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FSLABB_YouAndCoworkersTrained__c</fullName>
        <globalPicklist>FSLABB_YesNoChoice</globalPicklist>
        <inlineHelpText>You and co-workers are suitably trained for the task?</inlineHelpText>
        <label>You and co-workers are suitably trained?</label>
        <type>Picklist</type>
    </fields>
    <label>Stop Take 5</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ST5-{000000}</displayFormat>
        <label>Stop Take 5 Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stop Take 5</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>